# chatgpt_mvp

./: .env  .gitignore  README.md  accuracy_metrics.py  config.ini.default  environment_chatgpt_sql.yml  pyproject.toml  run_chatbot.py  terminal.py  utils.py
chatbot/: chatgpt.py  classifier.py  controller.py  database.py  documentation.py  enquiries.py
tests/: test_classifer.py  test_database.py  test_enquiries.py
